# USBProxy2

./: LINKS  README.md  TODO
.devcontainer/: Dockerfile  devcontainer.json
debugging/: dmesg.out  example.out  example.sh  test.out  test.sh
proxy-suite-integration/: README.md
proxy-suite-integration/.devcontainer/: Dockerfile  devcontainer.json
proxy-suite-integration/scripts/: run.sh
proxy-suite-integration/usbproxy2/: main.py  pyproject.toml
proxy-suite-integration/usbproxy2/usbproxy2/: configurer.py  reader.py
scripts/: install-locally.sh
viewsb/: README.md
viewsb/.devcontainer/: Dockerfile  devcontainer.json
viewsb/scripts/: flash-board.sh
viewsb/src/: install-analyzer-applet.py
